# computing_systems

lab1/: CMakeLists.txt  size_test.py  thread_test.py
lab1/include/: Argument.h  ComputingMode.h  Random.h  SquareMatrix.h
lab1/src/: Argument.cpp  OmpSquareMatrix.cpp  PthreadSquareMatrix.cpp  SequenceSquareMatrix.cpp  SquareMatrix.cpp  TbbSquareMatrix.cpp  main.cpp
lab2/: .gitignore  CMakeLists.txt
lab2/include/: MpiSquareMatrix.h  Random.h  Time.h
lab2/src/: Argument.cpp  MpiSquareMatrix.cpp  Random.cpp  main.cpp
